[gd_scene load_steps=13 format=2]

[ext_resource path="res://asset/sprite2D/UI/bg_main.png" type="Texture" id=1]
[ext_resource path="res://object/user_interface/user_interface.tscn" type="PackedScene" id=2]
[ext_resource path="res://object/test/test.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/frame7/questions.gd" type="Script" id=4]
[ext_resource path="res://asset/sprite2D/UI/btn_submit.png" type="Texture" id=5]
[ext_resource path="res://object/button/button_v2.tscn" type="PackedScene" id=6]
[ext_resource path="res://asset/sprite2D/UI/certificate_icon.png" type="Texture" id=7]
[ext_resource path="res://asset/sprite2D/VFX/effect_shine.png" type="Texture" id=8]
[ext_resource path="res://asset/sprite2D/UI/btn_nhan.png" type="Texture" id=9]
[ext_resource path="res://object/message/message.tscn" type="PackedScene" id=10]
[ext_resource path="res://asset/sprite2D/UI/da_hoan_thanh.png" type="Texture" id=11]
[ext_resource path="res://asset/sprite2D/UI/task_icon.png" type="Texture" id=12]

[node name="Exercise" type="Node"]
script = ExtResource( 4 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="Interface"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Test" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -600.0
margin_right = 600.0
margin_bottom = 700.0
__meta__ = {
"_edit_lock_": true
}

[node name="DaHoanThanh" type="Sprite" parent="CanvasLayer"]
position = Vector2( 385, 69 )
rotation = -0.701971
scale = Vector2( 0.522663, 0.522663 )
texture = ExtResource( 11 )

[node name="Buttons" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="BtnSubmit" parent="CanvasLayer/Buttons" instance=ExtResource( 6 )]
margin_left = 421.0
margin_top = 112.0
margin_right = 611.0
margin_bottom = 183.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 5 )

[node name="TaskIcon" type="Sprite" parent="CanvasLayer/Buttons/BtnSubmit"]
position = Vector2( -25.7144, 35.7143 )
scale = Vector2( 0.684332, 0.684332 )
texture = ExtResource( 12 )

[node name="BtnCertificate" type="Control" parent="CanvasLayer/Buttons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Light2D" type="Light2D" parent="CanvasLayer/Buttons/BtnCertificate"]
position = Vector2( 396, 0 )
scale = Vector2( 0.305275, 0.305275 )
texture = ExtResource( 8 )

[node name="BtnTake" parent="CanvasLayer/Buttons/BtnCertificate" instance=ExtResource( 6 )]
margin_left = 420.0
margin_top = -26.0
margin_right = 610.0
margin_bottom = 45.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 9 )

[node name="TextureButton" type="Sprite" parent="CanvasLayer/Buttons/BtnCertificate/BtnTake"]
position = Vector2( -31.4285, 40 )
rotation = -0.0414707
scale = Vector2( 0.250432, 0.374707 )
texture = ExtResource( 7 )

[node name="Message" parent="CanvasLayer" instance=ExtResource( 10 )]
__meta__ = {
"_edit_lock_": true
}

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource( 2 )]

[connection signal="button_down" from="CanvasLayer/Buttons/BtnSubmit" to="." method="_on_BtnSubmit_button_down"]
[connection signal="button_down" from="CanvasLayer/Buttons/BtnCertificate/BtnTake" to="." method="_on_BtnTake_button_down"]
